# rust-app

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  sys_dept.rs  sys_menu.rs  sys_position.rs  sys_role.rs  sys_role_menu.rs  sys_user.rs  sys_user_dept.rs  sys_user_position.rs  sys_user_role.rs
migration/src/: m20220101_000001_create_table.rs
src/: errors.rs  main.rs  ratelimit.rs  schema.rs
src/api/: mod.rs  ping_controller.rs  server_metadata.rs
src/api/auth/: login.rs  mod.rs  utils.rs
src/config/: db.rs
src/schemas/: message.rs  mod.rs  server_metadata.rs  traits.rs  user.rs
src/schemas/auth/: login.rs  mod.rs
